fix overlapping display on tablet

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1993,6 +1993,9 @@ div[id*='res'] .oese-search-result .p_title a{ color:#2d8700; font-size:20px; fo
 	.program-template.template-mobile, .office-template.template-mobile, .audience-template.template-mobile, .awards-template.template-mobile {
         flex-direction: column-reverse;
     }
+	.program-template.template-mobile .col-sm-12, .office-template.template-mobile .col-sm-12{
+		flex:0;
+	}
 	#mobileSidebarTab.nav-tabs { border-bottom:none; background: #004285; }
     #mobileSidebarTab.nav-tabs .nav-item { width:50%; }
 		#mobileSidebarTab.nav-tabs .nav-item.full { width:100% !important; }
